连同之前版本，修复piper  P.xxx名称变化问题，新号发名片

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -64,7 +64,6 @@ url.temail-auth.register=/register
 url.temail-auth.publish=/publish/temails
 ##\u90AE\u7BB1id\u914D\u7F6E,\u79DF\u6237id,\u8BBE\u7F6Eid
 #app.pipeline.userId=a.piper@t.email
-app.pipeline.userId=a.piper@t.email
 
 app.pipeline.tenantId=syswin
 app.pipeline.deviceId=aaaaaaaaa
@@ -105,6 +104,8 @@ app.ps-app-sdk.cdtp-dns=http://www.cdtpdns.com/accounts/
 app.ps-app-sdk.kms-server=http://172.28.43.105:8089/kms-server
 app.ps-app-sdk.tenant-id=syswin
 app.ps-app-sdk.enable=true
+app.ps-app-sdk.user-id=a.piper@t.email
+
 
 app.ps-app-admin.auto-start-account=true
 app.ps-app-admin.server=http://127.0.0.1:${app.ps-app-admin.port}/
@@ -114,3 +115,4 @@ app.ps-app-admin.enable=true
 
 psserver.server.tmail=a.dm@msgseal.com
 #psserver.server.tmail=a.ps-app-01@msgseal.com
+
