--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -50,7 +50,6 @@ spring.thymeleaf.cache=false
 #url.temail-auth.register=/register
 #url.temail-auth.publish=/publish/temails
 ###\u90AE\u7BB1id\u914D\u7F6E,\u79DF\u6237id,\u8BBE\u7F6Eid
-#app.pipeline.userId=a.piper@systoontest.com
 #app.pipeline.tenantId=syswin
 #app.pipeline.deviceId=aaaaaaaaa
 ##CDTP\u7F51\u5173\u914D\u7F6E
@@ -63,8 +62,7 @@ url.temail-auth.server=http://msgseal.t.email
 url.temail-auth.register=/register
 url.temail-auth.publish=/publish/temails
 ##\u90AE\u7BB1id\u914D\u7F6E,\u79DF\u6237id,\u8BBE\u7F6Eid
-#app.pipeline.userId=a.piper@t.email
-app.pipeline.userId=a.piper@msgseal.com  
+#app.pipeline.userId=a.piper@msgseal.com
 
 app.pipeline.tenantId=syswin
 app.pipeline.deviceId=aaaaaaaaa
@@ -103,6 +101,7 @@ app.ps-app-sdk.cdtp-dns=http://www.cdtpdns.com/accounts/
 app.ps-app-sdk.kms-server=http://192.168.16.38:8081
 app.ps-app-sdk.tenant-id=syswin
 app.ps-app-sdk.enable=true
+app.ps-app-sdk.user-id=a.piper@msgseal.com
 
 app.ps-app-admin.auto-start-account=true
 app.ps-app-admin.server=http://127.0.0.1:${app.ps-app-admin.port}/
