--- a/src/main/resources/application-qiniu.properties
+++ b/src/main/resources/application-qiniu.properties
@@ -1,9 +1,9 @@
 logging.config=classpath:log4j2.xml
 mybatis.config-location = mybatis-config.xml
 # Druid JDBC \u914D\u7F6E
-spring.datasource.pipeline.url=jdbc:mysql://n1.mysql.innermail.com:3316/temail_piper?useUnicode=true&characterEncoding=UTF-8
-spring.datasource.pipeline.username=temail_piper
-spring.datasource.pipeline.password=2JK3s63s
+spring.datasource.pipeline.url=jdbc:mysql://n1mysql.service.innertools.com:3316/temail_piper?useUnicode=true&characterEncoding=UTF-8
+spring.datasource.pipeline.username=apps
+spring.datasource.pipeline.password=UcMysql@Sysw1n
 spring.datasource.pipeline.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.pipeline.pipelineMapperLocations = classpath:pipermapper/*.xml
 
@@ -37,16 +37,16 @@ spring.datasource.druid.stat-view-servlet.login-password=syswin#123
 spring.thymeleaf.cache=false
 
 
-url.temail-gateway.host=gateway.innermail.com
+url.temail-gateway.host=gateway.service.innertools.com
 url.temail-gateway.port=8099
 
 #url.temail-kms-cmi.service=http://kms.innermail.com:8081/kms-server
 
-url.temail-auth.server=http://auth.innermail.com:8081
+url.temail-auth.server=http://temail-auth.service.innertools.com:8081
 url.temail-auth.register=/register
 url.temail-auth.publish=/publish/temails
 
-app.pipeline.userId=a.piper@support2technical.me 
+#app.pipeline.userId=a.piper@support2technical.me
 
 app.pipeline.tenantId=qiniu
 app.pipeline.deviceId=aaaaaaaaa
@@ -55,9 +55,9 @@ app.pipeline.deviceId=aaaaaaaaa
 url.piper=http://msgseal.support2technical.me/piper
 
 
-spring.datasource.subengine.url=jdbc:mysql://n1.mysql.innermail.com:3316/temail_subengine?useUnicode=true&characterEncoding=UTF-8
-spring.datasource.subengine.username=temail_piper
-spring.datasource.subengine.password=2JK3s63s
+spring.datasource.subengine.url=jdbc:mysql://n1mysql.service.innertools.com:3316/temail_subengine?useUnicode=true&characterEncoding=UTF-8
+spring.datasource.subengine.username=apps
+spring.datasource.subengine.password=UcMysql@Sysw1n
 spring.datasource.subengine.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.subengine.subMapperLocations = classpath:submapper/*.xml
 
@@ -75,7 +75,7 @@ p.pipeline.imgUrl=
 
 #####p.xxx账号注册激活相关
 app.ps-app-sdk.cdtp-dns=http://www.cdtpdns.com/accounts/
-app.ps-app-sdk.kms-server=http://kms.innermail.com:8081/kms-server
+app.ps-app-sdk.kms-server=http://temail-kms-server.service.innertools.com:8081/kms-server
 app.ps-app-sdk.tenant-id=syswin
 app.ps-app-sdk.enable=true
 
@@ -85,5 +85,5 @@ app.ps-app-admin.server=http://127.0.0.1:${app.ps-app-admin.port}/
 app.ps-app-admin.port=8082 
 app.ps-app-admin.enable=true
 
-psserver.server.tmail=a.dm@msgseal.com
+psserver.server.tmail=a.dm@support2technical.me
 #psserver.server.tmail=a.ps-app-01@msgseal.com
