--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,8 @@
     <groupId>com.syswin.pipeline</groupId>
     <artifactId>piper</artifactId>
     <version>1.7.6-SNAPSHOT</version>
+    <packaging>war</packaging>
+
 
     <name>${project.artifactId}</name>
     <description>pipeline</description>
