--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.syswin.pipeline</groupId>
     <artifactId>piper</artifactId>
-    <version>1.7.6-SNAPSHOT</version>
+    <!--<version>1.7.6-SNAPSHOT</version>-->
     <packaging>war</packaging>
 
 
