--- a/src/main/resources/application-qiniu-dev.properties
+++ b/src/main/resources/application-qiniu-dev.properties
@@ -1,9 +1,9 @@
 logging.config=classpath:log4j2.xml
 mybatis.config-location = mybatis-config.xml
 # Druid JDBC \u914D\u7F6E
-spring.datasource.pipeline.url=jdbc:mysql://n1mysql.service.innertools.com:3316/temail_piper?useUnicode=true&characterEncoding=UTF-8
-spring.datasource.pipeline.username=apps
-spring.datasource.pipeline.password=UcMysql@Sysw1n
+spring.datasource.pipeline.url=jdbc:mysql://172.28.50.12:3306/pipeline?useUnicode=true&characterEncoding=UTF-8
+spring.datasource.pipeline.username=root
+spring.datasource.pipeline.password=9A7FEa98sP
 spring.datasource.pipeline.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.pipeline.pipelineMapperLocations = classpath:pipermapper/*.xml
 
@@ -37,12 +37,12 @@ spring.datasource.druid.stat-view-servlet.login-password=syswin#123
 spring.thymeleaf.cache=false
 
 
-url.temail-gateway.host=gateway.service.innertools.com
+url.temail-gateway.host=msgseal.t.email
 url.temail-gateway.port=8099
 
 #url.temail-kms-cmi.service=http://kms.innermail.com:8081/kms-server
 
-url.temail-auth.server=http://temail-auth.service.innertools.com:8081
+url.temail-auth.server=http://msgseal.t.email
 url.temail-auth.register=/register
 url.temail-auth.publish=/publish/temails
 
@@ -50,7 +50,7 @@ url.temail-auth.publish=/publish/temails
 
 app.pipeline.tenantId=qiniu
 app.pipeline.deviceId=aaaaaaaaa
-
+        
 #app.pssever.cdtphost=172.28.43.107
 app.pssever.cdtphost=172.28.43.105
 app.pssever.cdtpcms=2561
@@ -59,16 +59,13 @@ app.pssever.cdtpport=8686
 url.piper=http://msgseal.support2technical.me/piper
 
 
-spring.redis.sentinel.master = email-test
-spring.redis.sentinel.nodes = n1redis.service.innertools.com:26379,n2redis.service.innertools.com:26379,n3redis.service.innertools.com:26379
-spring.redis.password = b840b7be6c52
-spring.redis.database = 0
+spring.redis.host=192.168.16.98
 spring.redis.port=6379
+spring.redis.password=b840b7be6c52
 
-
-spring.datasource.subengine.url=jdbc:mysql://n1mysql.service.innertools.com:3316/temail_subengine?useUnicode=true&characterEncoding=UTF-8
-spring.datasource.subengine.username=apps
-spring.datasource.subengine.password=UcMysql@Sysw1n
+spring.datasource.subengine.url=jdbc:mysql://172.28.50.12:3306/subengine?useUnicode=true&characterEncoding=UTF-8
+spring.datasource.subengine.username=root
+spring.datasource.subengine.password=9A7FEa98sP
 spring.datasource.subengine.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.subengine.subMapperLocations = classpath:submapper/*.xml
 
@@ -81,19 +78,19 @@ pipertype.promission=organize
 domain.promission=support2technical.me
 
 app.pipeline.nick=Piper
-app.pipeline.imgUrl=http://msgseal.support2technical.me/piper/web/static/images/piper.png
+app.pipeline.imgUrl=${url.piper}/static/images/piper.png
 p.pipeline.imgUrl=
 
 #####p.xxx账号注册激活相关
 app.ps-app-sdk.cdtp-dns=http://www.cdtpdns.com/accounts/
-app.ps-app-sdk.kms-server=http://temail-kms-server.service.innertools.com:8081/kms-server
+app.ps-app-sdk.kms-server=http://172.28.43.105:8089/kms-server
 app.ps-app-sdk.tenant-id=syswin
 app.ps-app-sdk.enable=true
-app.ps-app-sdk.user-id=a.dm@support2technical.me
+app.ps-app-sdk.user-id=a.piper@t.email
 
 app.ps-app-admin.auto-start-account=true
 app.ps-app-admin.server=http://127.0.0.1:${app.ps-app-admin.port}/
-# admin \u7684\u7AEF\u53E3
+# admin 的端口
 app.ps-app-admin.port=8082 
 app.ps-app-admin.enable=true
 
