--- a/src/main/resources/application-qiniu-dev.properties
+++ b/src/main/resources/application-qiniu-dev.properties
@@ -48,7 +48,6 @@ url.temail-auth.publish=/publish/temails
 
 #app.pipeline.userId=a.piper@support2technical.me
 
-app.pipeline.tenantId=qiniu
 app.pipeline.deviceId=aaaaaaaaa
 
 url.piper=http://msgseal.support2technical.me/piper
@@ -74,7 +73,7 @@ p.pipeline.imgUrl=
 #####p.xxx账号注册激活相关
 app.ps-app-sdk.cdtp-dns=http://www.cdtpdns.com/accounts/
 app.ps-app-sdk.kms-server=http://172.28.43.105:8089/kms-server
-app.ps-app-sdk.tenant-id=syswin
+app.ps-app-sdk.tenant-id=qiniu
 app.ps-app-sdk.enable=true
 app.ps-app-sdk.user-id=a.piper@t.email
 
