--- a/src/main/resources/application-qiniu.properties
+++ b/src/main/resources/application-qiniu.properties
@@ -48,8 +48,6 @@ url.temail-auth.publish=/publish/temails
 
 #app.pipeline.userId=a.piper@support2technical.me
 
-app.pipeline.tenantId=qiniu
-app.pipeline.deviceId=aaaaaaaaa
 
 url.piper=http://msgseal.support2technical.me/piper
 
@@ -74,9 +72,12 @@ p.pipeline.imgUrl=
 #####p.xxx账号注册激活相关
 app.ps-app-sdk.cdtp-dns=http://www.cdtpdns.com/accounts/
 app.ps-app-sdk.kms-server=http://temail-kms-server.service.innertools.com:8081/kms-server
-app.ps-app-sdk.tenant-id=syswin
+app.ps-app-sdk.tenant-id=qiniu
 app.ps-app-sdk.enable=true
 app.ps-app-sdk.user-id=a.piper@support2technical.me
+
+app.pipeline.deviceId=aaaaaaaaa
+
 
 app.ps-app-admin.auto-start-account=true
 app.ps-app-admin.server=http://127.0.0.1:${app.ps-app-admin.port}/
