统一修改消息体

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -68,7 +68,7 @@ url.temail-auth.publish=/publish/temails
 app.pipeline.deviceId=aaaaaaaaa
 
 #\u8FDC\u7A0B\u670D\u52A1\u5668
-url.piper=http://172.28.43.105:50000/piper
+url.piper=http://172.31.242.127:8080/piper
 #\u672C\u5730\u6D4B\u8BD5\u670D
 #url.piper=http://172.31.241.102:8080
 
@@ -87,8 +87,8 @@ pipertype.promission=person,organize,ciftis,feedpublish
 domain.promission=syswin,msgseal,t.email
 
 app.pipeline.nick=Piper
-app.pipeline.imgUrl=${url.piper}/static/images/piper.png
-p.pipeline.imgUrl=
+app.pipeline.imgUrl=${url.piper}/static/images/piper_new.png
+p.pipeline.imgUrl=${url.piper}/static/images/piper_new.png
 
 #####p.xxx\u8D26\u53F7\u6CE8\u518C\u6FC0\u6D3B\u76F8\u5173
 app.ps-app-sdk.cdtp-dns=http://www.cdtpdns.com/accounts/
@@ -100,10 +100,8 @@ app.ps-app-sdk.user-id=a.piper@t.email
 
 app.ps-app-admin.auto-start-account=true
 app.ps-app-admin.server=http://127.0.0.1:${app.ps-app-admin.port}/
-# admin \u7684\u7AEF\u53E3
 app.ps-app-admin.port=8082 
 app.ps-app-admin.enable=true
 
 psserver.server.tmail=a.dm@msgseal.com
-#psserver.server.tmail=a.ps-app-01@msgseal.com
 
