--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -7,7 +7,6 @@ spring.datasource.pipeline.password=miyou
 spring.datasource.pipeline.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.pipeline.pipelineMapperLocations = classpath:pipermapper/*.xml
 
-# gossip \u8FDE\u63A5\u6C60\u914D\u7F6E
 spring.datasource.pipeline.time-between-log-stats-millis=30000
 spring.datasource.pipeline.initial-size=1
 spring.datasource.pipeline.max-active=5
@@ -21,14 +20,12 @@ spring.datasource.pipeline.test-while-idle=true
 spring.datasource.pipeline.time-between-eviction-runs-millis=60000
 spring.datasource.pipeline.filters=stat,slf4j
 
-# \u914D\u7F6EStatFilter
 spring.datasource.druid.filter.stat.db-type=mysql
 spring.datasource.druid.filter.stat.log-slow-sql=true
 spring.datasource.druid.filter.stat.slow-sql-millis=10
 spring.datasource.druid.filter.slf4j.enabled=true
 spring.datasource.druid.filter.slf4j.statementExecutableSqlLogEnable=true
 
-# WebStatFilter\u914D\u7F6E\uFF0C\u8BF4\u660E\u8BF7\u53C2\u8003Druid Wiki\uFF0C\u914D\u7F6E_\u914D\u7F6EWebStatFilter
 spring.datasource.druid.web-stat-filter.enabled=true
 spring.datasource.druid.stat-view-servlet.enabled=true
 spring.datasource.druid.stat-view-servlet.login-username=druid
@@ -39,14 +36,11 @@ spring.thymeleaf.cache=false
 
 url.temail-gateway.host=msgseal.t.email
 url.temail-gateway.port=8099
-##temail-kms-cmi\u5BC6\u57FA\u914D\u7F6E
-#url.temail-kms-cmi.service=http://192.168.16.38:8081
-##\u8BA4\u8BC1\u670D\u52A1\u5668\u914D\u7F6E
+
 url.temail-auth.server=http://msgseal.t.email
 url.temail-auth.register=/register
 url.temail-auth.publish=/publish/temails
-##\u90AE\u7BB1id\u914D\u7F6E,\u79DF\u6237id,\u8BBE\u7F6Eid
-#app.pipeline.userId=a.piper@msgseal.com
+
 
 app.pipeline.deviceId=aaaaaaaaa
 
@@ -71,8 +65,8 @@ pipertype.promission=person,organize,ciftis,feedpublish
 domain.promission=syswin,msgseal,t.email
 
 app.pipeline.nick=Piper
-app.pipeline.imgUrl=${url.piper}/web/static/images/piper.png
-p.pipeline.imgUrl=
+app.pipeline.imgUrl=${url.piper}/static/images/piper_new.png
+p.pipeline.imgUrl=${url.piper}/static/images/piper_new.png
 
 #####p.xxx账号注册激活相关
 app.ps-app-sdk.cdtp-dns=http://www.cdtpdns.com/accounts/
