--- a/pom.xml
+++ b/pom.xml
@@ -124,7 +124,7 @@
         <dependency>
             <groupId>com.syswin.ps.sdk</groupId>
             <artifactId>ps-app-sdk-starter</artifactId>
-            <version>1.1.5</version>
+            <version>1.1.8</version>
         </dependency>
 
 
@@ -137,9 +137,9 @@
         <dependency>
             <groupId>com.syswin.temail</groupId>
             <artifactId>vault-keeper</artifactId>
-            <!--<version>1.1.1-SNAPSHOT-win</version>-->
+            <version>1.1.1-SNAPSHOT-win</version>
             <!--<version>1.1.1-SNAPSHOT</version>-->
-            <version>1.1.0</version>
+            <!--<version>1.1.0</version>-->
         </dependency>
 
 
