统一消息发送，修改创建BUG，修改小助手接收消息BUG

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -62,8 +62,7 @@ url.temail-gateway.port=8099
 url.temail-auth.server=http://msgseal.t.email
 url.temail-auth.register=/register
 url.temail-auth.publish=/publish/temails
-##\u90AE\u7BB1id\u914D\u7F6E,\u79DF\u6237id,\u8BBE\u7F6Eid
-#app.pipeline.userId=a.piper@t.email
+url.temail-auth.active=/publish/activate
 
 app.pipeline.deviceId=aaaaaaaaa
 
@@ -86,7 +85,6 @@ a.piper.menu.promission=person,recommend,mysublist,group
 pipertype.promission=person,organize,ciftis,feedpublish
 domain.promission=syswin,msgseal,t.email
 
-app.pipeline.nick=Piper
 app.pipeline.imgUrl=${url.piper}/static/images/piper_new.png
 p.pipeline.imgUrl=${url.piper}/static/images/piper_new.png
 
@@ -103,5 +101,8 @@ app.ps-app-admin.server=http://127.0.0.1:${app.ps-app-admin.port}/
 app.ps-app-admin.port=8082 
 app.ps-app-admin.enable=true
 
-psserver.server.tmail=a.dm@msgseal.com
+log.sendF=p.10000001@t.email
+log.receiveUserA=luohongzhou1@syswin.com
+log.receiveUserB=luohongzhou@syswin.com
+log.cornPeriod=0 */3 * * * ?
 
