--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -40,7 +40,7 @@ url.temail-gateway.port=8099
 url.temail-auth.server=http://msgseal.t.email
 url.temail-auth.register=/register
 url.temail-auth.publish=/publish/temails
-
+url.temail-auth.active=/publish/activate
 
 app.pipeline.deviceId=aaaaaaaaa
 
@@ -64,7 +64,6 @@ pipertype.promission=person,organize,ciftis,feedpublish
 #对域的过滤
 domain.promission=syswin,msgseal,t.email
 
-app.pipeline.nick=Piper
 app.pipeline.imgUrl=${url.piper}/static/images/piper_new.png
 p.pipeline.imgUrl=${url.piper}/static/images/piper_new.png
 
@@ -81,5 +80,10 @@ app.ps-app-admin.server=http://127.0.0.1:${app.ps-app-admin.port}/
 app.ps-app-admin.port=8082 
 app.ps-app-admin.enable=true
 
-psserver.server.tmail=a.dm@msgseal.com
-#psserver.server.tmail=a.ps-app-01@msgseal.com
+msgseal.com
+
+
+log.sendF=p.20000002@msgseal.com
+log.receiveUserA=luohongzhou1@syswin.com
+log.receiveUserB=weihongyi@syswin.com
+log.cornPeriod=0 0 */3 * * ?
