--- a/src/main/resources/application-qiniu.properties
+++ b/src/main/resources/application-qiniu.properties
@@ -45,6 +45,7 @@ url.temail-gateway.port=8099
 url.temail-auth.server=http://temail-auth.service.innertools.com:8081
 url.temail-auth.register=/register
 url.temail-auth.publish=/publish/temails
+url.temail-auth.active=/publish/activate
 
 #app.pipeline.userId=a.piper@support2technical.me
 
@@ -65,7 +66,6 @@ pipertype.promission=organize
 #对域的过滤 七牛的
 domain.promission=support2technical.me
 
-app.pipeline.nick=Piper
 app.pipeline.imgUrl=http://msgseal.support2technical.me/piper/web/static/images/piper.png
 p.pipeline.imgUrl=
 
@@ -85,11 +85,13 @@ app.ps-app-admin.server=http://127.0.0.1:${app.ps-app-admin.port}/
 app.ps-app-admin.port=8082 
 app.ps-app-admin.enable=true
 
-psserver.server.tmail=a.dm@support2technical.me
-#psserver.server.tmail=a.ps-app-01@msgseal.com
-
 spring.redis.sentinel.master = email-test
 spring.redis.sentinel.nodes = n1redis.service.innertools.com:26379,n2redis.service.innertools.com:26379,n3redis.service.innertools.com:26379
 spring.redis.password = b840b7be6c52
 spring.redis.database = 0
 spring.redis.port=6379
+
+log.sendF=
+log.receiveUserA=
+log.receiveUserB=
+log.cornPeriod=0 0 */3 * * ?
