--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,10 +38,8 @@ spring.thymeleaf.servlet.content-type=text/html
 
 spring.messages.basename=i18n/lang
 
-
-app.pipeline.nick=a.piper
-app.pipeline.imgUrl=
-p.pipeline.imgUrl=
+psserver.prex=a.piper@
+psserver.server.tmail=a.dm@
 
 psserver.path=/post/reserveAppTemail
 
