--- a/src/main/resources/application-qiniu-dev.properties
+++ b/src/main/resources/application-qiniu-dev.properties
@@ -45,6 +45,7 @@ url.temail-gateway.port=8099
 url.temail-auth.server=http://msgseal.t.email
 url.temail-auth.register=/register
 url.temail-auth.publish=/publish/temails
+url.temail-auth.active=/publish/activate
 
 #app.pipeline.userId=a.piper@support2technical.me
 
@@ -83,8 +84,6 @@ app.ps-app-admin.server=http://127.0.0.1:${app.ps-app-admin.port}/
 app.ps-app-admin.port=8082 
 app.ps-app-admin.enable=true
 
-psserver.server.tmail=a.dm@support2technical.me
-#psserver.server.tmail=a.ps-app-01@msgseal.com
 
 spring.redis.host=192.168.16.98
 spring.redis.port=6379
