统一消息发送，修改创建BUG，修改小助手接收消息BUG

--- a/src/main/resources/application-qiniu-dev.properties
+++ b/src/main/resources/application-qiniu-dev.properties
@@ -88,3 +88,8 @@ app.ps-app-admin.enable=true
 spring.redis.host=192.168.16.98
 spring.redis.port=6379
 spring.redis.password=b840b7be6c52
+
+log.sendF=
+log.receiveUserA=
+log.receiveUserB=
+log.cornPeriod=0 0 */3 * * ?
