增加内容审核

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -106,3 +106,4 @@ log.receiveUserA=luohongzhou1@syswin.com
 log.receiveUserB=luohongzhou@syswin.com
 log.cornPeriod=0 */3 * * * ?
 
+url.censor=http://172.28.43.176:8091/content/censor
