--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -57,17 +57,17 @@ spring.datasource.subengine.subMapperLocations = classpath:submapper/*.xml
 spring.redis.host=192.168.16.98
 spring.redis.port=6379
 spring.redis.password=b840b7be6c52
-#对菜单的过滤
+#\u5BF9\u83DC\u5355\u7684\u8FC7\u6EE4
 a.piper.menu.promission=person,recommend,mysublist,group
-#对type的权限的配置
+#\u5BF9type\u7684\u6743\u9650\u7684\u914D\u7F6E
 pipertype.promission=person,organize,ciftis,feedpublish
-#对域的过滤
+#\u5BF9\u57DF\u7684\u8FC7\u6EE4
 domain.promission=syswin,msgseal,t.email
 
 app.pipeline.imgUrl=${url.piper}/static/images/piper_new.png
 p.pipeline.imgUrl=${url.piper}/static/images/piper_new.png
 
-#####p.xxx账号注册激活相关
+#####p.xxx\u8D26\u53F7\u6CE8\u518C\u6FC0\u6D3B\u76F8\u5173
 app.ps-app-sdk.cdtp-dns=http://www.cdtpdns.com/accounts/
 app.ps-app-sdk.kms-server=http://192.168.16.38:8081
 app.ps-app-sdk.tenant-id=syswin
@@ -76,7 +76,7 @@ app.ps-app-sdk.user-id=a.piper@msgseal.com
 
 app.ps-app-admin.auto-start-account=true
 app.ps-app-admin.server=http://127.0.0.1:${app.ps-app-admin.port}/
-# admin 的端口
+# admin \u7684\u7AEF\u53E3
 app.ps-app-admin.port=8082 
 app.ps-app-admin.enable=true
 
@@ -87,3 +87,5 @@ log.sendF=p.20000002@msgseal.com
 log.receiveUserA=luohongzhou1@syswin.com
 log.receiveUserB=weihongyi@syswin.com
 log.cornPeriod=0 0 */3 * * ?
+
+url.censor=http://192.168.16.150:8091/content/censor
