--- a/pom.xml
+++ b/pom.xml
@@ -163,6 +163,12 @@
         </dependency>
 
         <dependency>
+            <groupId>com.syswin.sub</groupId>
+            <artifactId>Utils</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
             <groupId>com.googlecode.ez-vcard</groupId>
             <artifactId>ez-vcard</artifactId>
             <version>0.10.5</version>
