--- a/pom.xml
+++ b/pom.xml
@@ -164,7 +164,7 @@
 
         <dependency>
             <groupId>com.syswin.sub</groupId>
-            <artifactId>Utils</artifactId>
+            <artifactId>utils</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
